--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,13 @@
     "plugins": ["react"],
     "rules": {
       "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+      "react/function-component-definition": [
+        "error",
+        {
+          "namedComponents": ["arrow-function"],
+          "unnamedComponents": "arrow-function"
+        }
+      ],
       "react/react-in-jsx-scope": "off",
       "import/no-unresolved": "off",
       "no-shadow": "off"
